# russian-problem

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml
src/: Backtrack.cpp  Backtrack.h  CMakeLists.txt  main.cpp
tst/: Backtrack-test.cpp  CMakeLists.txt
